# aiusage

./: .gitignore  README.md  pyproject.toml
go-rewrite/: go.mod  go.sum
go-rewrite/cmd/aiusage/: main.go
go-rewrite/internal/data/: claude.go  codex.go  fetch.go  models.go  pricing.go  shortmodel.go
go-rewrite/internal/tui/: app.go
src/claudeusagetui/: __init__.py  __main__.py  data.py
statusline/: statusline.sh
