[project]
name = "claudeusagetui"
version = "0.1.0"
description = "Claude Code usage dashboard TUI — personal stats, team racing scoreboard, tamagotchi cat"
requires-python = ">=3.13"

dependencies = [
    "textual==8.1.1",
    "cryptography>=44.0.0",
]

[project.scripts]
claudeusagetui = "claudeusagetui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudeusagetui"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
